# KVStore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: kvstore.hpp  node_role.hpp  persistence.hpp  replication.hpp  server.hpp
src/: kvstore.cpp  main.cpp  persistence.cpp  replication.cpp  server.cpp
